# llm_memorisation

./: .gitignore  .gitmodules  README.md  pyproject.toml  slurm_submit.sh
datasets/: validation_set.py
datasets/PISTOL/: README-3.md  sample_data_2_member.json  sample_data_2_non_member.json  sample_data_2_train.json  sample_data_2_val.json
datasets/medical_dataset/: deduplicated_medical_meadow_flashcards_member.json  deduplicated_medical_meadow_flashcards_non_member.json  deduplicated_medical_meadow_flashcards_val.json
finetune/: L2_Finetune_federated.ipynb  Plan.md  client.py  data_formatting.py  err.out  err_fix.out  err_fix1.out  err_no_eval.out  err_with_eval copy.out  err_with_eval.out  out.txt  pyproject.toml  slurm.sh  slurm_centralize.sh  slurm_dp.sh  slurm_fl.sh  test.py  train.py  train_dp.py  train_fl.py  train_fl_dp.py  train_fl_ex.py  utils.py
finetune/conf/: centralize_config_pythia.yaml  config_apple.yaml  config_pythia.yaml  config_pythia_dp.yaml  fl_config_pythia.yaml
finetune/my_fl_model/checkpoint-100/: README.md  adapter_config.json  adapter_model.safetensors  optimizer.pt  rng_state.pth  trainer_state.json
finetune/my_fl_model/checkpoint-50/: README.md  adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
finetune/my_fl_model/peft_0/: README.md
finetune/my_fl_model/peft_1/: README.md
finetune/my_fl_model/peft_2/: README.md
finetune/my_fl_model/peft_3/: README.md
finetune/my_model_medical_centralized_new/peft_0/: README.md
finetune/wandb/: settings
