[tool.poetry]
name = "llm-memorisation"
version = "0.1.0"
description = ""
authors = ["Preslav <preslav.aleksandrov@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.0"
numpy = "^2.1.2"
transformers = "^4.45.2"
datasets = "^3.0.2"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
scikit-learn = "^1.5.2"
openai = "^1.52.1"
packaging = "^24.1"
ninja = "^1.11.1.1"
pytorch-lightning = "^2.4.0"
zstandard = "^0.23.0"
simple-parsing = "^0.1.6"
nltk = "^3.9.1"
pytest = "^8.3.3"
huggingface-hub = "^0.26.1"
accelerate = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
